# rust-on-bare-metal

./: .gitignore  .gitlab-ci.yml  BACKLOG.MD  Cargo.toml  README.MD  memory_h7.x  problems.md
dice/: Cargo.toml  build.rs  rust-toolchain.toml
dice-common/: Cargo.toml
dice-common/img/: thaumatec_logo.tga  thaumatec_tg_black_on_white.tga  thaumatec_tg_box.tga  thaumatec_tg_gradient.tga  thaumatec_tg_white_on.black.tga
dice-common/src/: display.rs  http_utils.rs  lib.rs  mock_ethernet.rs  network_fsm.rs  network_utils.rs
dice-http/: Cargo.toml
dice-http-client/: Cargo.toml
dice-http-client/src/: crypto_api_client.rs  cryptocompare_api_client.rs  http_client.rs  lib.rs
dice-http/src/: default_pages.rs  lib.rs  response.rs
dice-simulation/: Cargo.toml
dice-simulation/src/: main.rs
dice/src/: main.rs  network_stack.rs  platform.rs  tls_stack.rs  webpages.rs
dice/src/platform/: stm32f4.rs  stm32h7.rs
dice/src/webpages/: index.html  styles.css
