[package]
name = "dice-common"
version = "0.1.0"
authors = ["gero <kacper.lesnianski@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dice-http = { path = "../dice-http" }
httparse = {version="1.3.5", default-features=false}
heapless = "0.7.3"
panic-semihosting = "0.5.6"
embedded-hal = "0.2.4"
smoltcp = { version = "0.7.0", default-features = false, features = ["ethernet", "proto-ipv4", "proto-ipv6", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-dhcpv4"] }
tinytga = {version = "0.3.2", features=["graphics"]}

hub75={git = "https://github.com/PawelLawrynowicz/hub75-rs", branch = "sm-optimization", features=["stripe-multiplexing"]}
embedded-graphics = "0.6.2"