[package]
name = "dice-http-client"
version = "0.1.0"
authors = ["Gero <kacper.lesnianski@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.7.2"
cortex-m-rt = "^0.6.0"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.4.0"
heapless = { version = "0.7.3", features=["serde"] }
httparse = { version= "1.3.5", default-features=false}
drogue-network = "0.2.0"